Enrich admin dashboard recent activity via auth by-ids.
Content-service calls auth-service to resolve author names so the dashboard returns table-ready rows.

Co-authored-by: Cursor <cursoragent@cursor.com>